--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "cookie-sessions": "0.0.2",
     "express": "2.5.9",
     "less": "1.3.0",
-    "request": "2.9.3"
+    "request": "2.9.3",
+    "riak-js": "latest"
   },
   "devDependencies": {
     "coffee-script": "1.2.0"
