--- a/settings.json
+++ b/settings.json
@@ -5,6 +5,7 @@
       "jquery.transloadit2.js",
       "keymaster.min.js",
       "jquery.timeago.js",
+      "/socket.io/socket.io.js",
       "underscore.js",
       "leaflet.js",
       "data.js",
@@ -16,6 +17,7 @@
       "jquery.transloadit2.js",
       "keymaster.min.js",
       "jquery.timeago.js",
+      "/socket.io/socket.io.js",
       "keymaster.min.js",
       "chosen.jquery.min.js",
       "underscore.js",
