--- a/settings.json
+++ b/settings.json
@@ -31,6 +31,7 @@
       "model/document.js",
       "instructors/instructor.js",
       "views/document.js",
+      "views/operations.js",
       "views/tools.js",
       "views/outline.js",
       "views/history.js",
