--- a/settings.json
+++ b/settings.json
@@ -2,6 +2,7 @@
   "scripts": {
     "development": [
       "jquery.min.js",
+      "jquery-ui.min.js",
       "jquery.transloadit2.js",
       "keymaster.min.js",
       "jquery.timeago.js",
